--- a/static/themes/cyberpunk/templates/chat.html
+++ b/static/themes/cyberpunk/templates/chat.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OpenManus</title>
-    <link rel="stylesheet" href="/static/style.css">
+    <title>OpenManus - Cyberpunk</title>
+    <link rel="stylesheet" href="/static/themes/cyberpunk/static/style.css">
     <!-- Add Font Awesome icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -53,7 +53,7 @@
             <div id="task-container" class="task-container cyber-panel">
                 <div class="welcome-message">
                     <div class="logo-animation">
-                        <img src="/static/logo-white.png" alt="OpenManus Logo" class="welcome-logo">
+                        <img src="/static/themes/cyberpunk/static/logo-white.png" alt="OpenManus Logo" class="welcome-logo">
                     </div>
 
                     <h2 class="title-text" data-text="MANUS INTERFACE">MANUS INTERFACE</h2>
@@ -88,6 +88,6 @@
         </div>
     </div>
 
-    <script src="/static/main.js"></script>
+    <script src="/static/themes/cyberpunk/static/main.js"></script>
 </body>
 </html>
