--- a/static/themes/cyberpunk/templates/chat.html
+++ b/static/themes/cyberpunk/templates/chat.html
@@ -53,7 +53,7 @@
             <div id="task-container" class="task-container cyber-panel">
                 <div class="welcome-message">
                     <div class="logo-animation">
-                        <img src="/static/themes/cyberpunk/static/logo-white.png" alt="OpenManus Logo" class="welcome-logo">
+                        <img src="/static/themes/cyberpunk/static/logo_white.png" alt="OpenManus Logo" class="welcome-logo">
                     </div>
 
                     <h2 class="title-text" data-text="MANUS INTERFACE">MANUS INTERFACE</h2>
@@ -88,6 +88,6 @@
         </div>
     </div>
 
-    <script src="/static/themes/cyberpunk/static/main.js"></script>
+    <script src="/static/themes/cyberpunk/static/main.js" defer></script>
 </body>
 </html>
